[tool.poetry]
name = "crunchbase-crawlee"
version = "0.1.0"
description = ""
authors = ["Max Bohomolov <moriturus7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
crawlee = {version = "0.5.0", extras = ["curl-impersonate", "parsel"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
