[project]
name = "crunchbase-crawlee"
version = "0.1.0"
description = ""
authors = [
    {name = "Max Bohomolov",email = "moriturus7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "crawlee[curl-impersonate,parsel] (>=0.5.1,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
